# qvgmsplit

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: windows-clang-vcpkg.yaml
ci/: build.py
src/: ARCHITECTURE.md  backend.cpp  backend.h  gui_app.cpp  gui_app.h  main.cpp  mainwindow.cpp  mainwindow.h  options_dialog.cpp  options_dialog.h  render_dialog.cpp  render_dialog.h  settings.cpp  settings.h  test.cpp  vgm.cpp  vgm.h  wave_writer.cpp  wave_writer.h
src/lib/: box_array.h  copy_move.h  defer.h  enumerate.h  format.cpp  format.h  hv_line.h  layout_macros.h  release_assert.h  trace.h  unwrap.h
subprojects/: microsoft-gsl.wrap
subprojects/libvgm/: .gitrepo
