project('qvgmsplit', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++14'],
)

executable('qvgmsplit',
  'src/backend.cpp',
  'src/backend.h',
  'src/gui_app.cpp',
  'src/gui_app.h',
  'src/lib/box_array.h',
  'src/lib/copy_move.h',
  'src/lib/defer.h',
  'src/lib/enumerate.h',
  'src/lib/format.cpp',
  'src/lib/format.h',
  'src/lib/gtr.h',
  'src/lib/hv_line.h',
  'src/lib/layout_macros.h',
  'src/lib/release_assert.h',
  'src/lib/trace.h',
  'src/lib/unwrap.h',
  'src/main.cpp',
  'src/mainwindow.cpp',
  'src/mainwindow.h',
  'src/options_dialog.cpp',
  'src/options_dialog.h',
  'src/render_dialog.cpp',
  'src/render_dialog.h',
  'src/settings.cpp',
  'src/settings.h',
  'src/vgm.cpp',
  'src/vgm.h',
  'src/wave_writer.cpp',
  'src/wave_writer.h',
  install : true,
)
